# ada-remote

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/capture/: Cargo.toml
crates/capture/src/: lib.rs
crates/codec/: Cargo.toml
crates/codec/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/input/: Cargo.toml
crates/input/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs  signaling.rs  webrtc.rs
desktop/: index.html  package.json
desktop/src/: main.js  style.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: BUILDING.md  CONTRIBUTING.md  PROTOCOL.md
relay-server/: Cargo.toml  README.md  ada-remote-relay.service  config.example.toml
relay-server/src/: main.rs
