[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/capture",
    "crates/input",
    "crates/codec",
    "crates/crypto",
    "crates/network",
    "relay-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ada Remote Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AdaWorldAPI/ada-remote"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking
webrtc = "0.9"
quinn = "0.10"  # QUIC implementation
tokio-tungstenite = "0.21"  # WebSocket

# Cryptography
ring = "0.17"
argon2 = "0.5"
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
rand = "0.8"

# Video encoding/decoding
ffmpeg-next = "6.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Internal crates
ada-remote-core = { path = "crates/core" }
ada-remote-capture = { path = "crates/capture" }
ada-remote-input = { path = "crates/input" }
ada-remote-codec = { path = "crates/codec" }
ada-remote-crypto = { path = "crates/crypto" }
ada-remote-network = { path = "crates/network" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
