[package]
name = "ada-remote-relay-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "relay-server"
path = "src/main.rs"

[dependencies]
ada-remote-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.6", features = ["v4"] }
