[package]
name = "ada-remote-desktop"
version = "0.1.0"
edition = "2021"
authors = ["Ada Remote Contributors"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
ada-remote-core = { path = "../../crates/core" }
ada-remote-capture = { path = "../../crates/capture" }
ada-remote-input = { path = "../../crates/input" }
ada-remote-codec = { path = "../../crates/codec" }
ada-remote-crypto = { path = "../../crates/crypto" }
ada-remote-network = { path = "../../crates/network" }

tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
